--- a/checkmate/templates/mypageScrap_off.html
+++ b/checkmate/templates/mypageScrap_off.html
@@ -27,7 +27,7 @@
     </div>
     <div class="mypage_content col-10 col-md-8">
         <div class="mypage_scap-content">
-            <h3 class="mypage_subtitle row">스크랩</h3>
+            <h3 class="mypage_subtitle row">자취 정보 스크랩</h3>
             <form action="">
                 <button class="row" formaction="{% url 'mypageScrap' %}">룸메이트 찾기</button>
                 <button class="row" formaction="{% url 'mypageScrap_dom' %}" >기숙사 정보</button>
