--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -381,16 +381,18 @@
             </tbody>
         </table>
         <div>
+            {% if user.is_authenticated %}
             <a class="btn btn-light float-end new-content" href="{% url 'create' %}">글쓰기</a>
+            {% endif %}
         </div>
     </div>
     <div class="pagination-box">
         <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="#" style="color:#254074; border:0;">◀</a></li>
+            <li class="page-item"><a class="page-link" href="{% url 'searchRoommate'%}?page={{ page_obj.previous_page_number }}" style="color:#254074; border:0;">◀</a></li>
             {% for page in page_range %}
             <li class="page-item"><a class="page-link" href="{% url 'searchRoommate'%}?page={{page}}" style="color:#254074; border:0;">{{page}}</a></li>
             {% endfor %}
-            <li class="page-item"><a class="page-link" href="#" style="color:#254074; border:0;">▶</a></li>
+            <li class="page-item"><a class="page-link" href="{% url 'searchRoommate'%}?page={{ page_obj.next_page_number }}" style="color:#254074; border:0;">▶</a></li>
         </ul>
     </div>
 </div>
