--- a/account/templates/mypageProfile.html
+++ b/account/templates/mypageProfile.html
@@ -32,7 +32,7 @@
 
         <form action="" method="post">
             {% csrf_token %}
-            <img id="target_img" src="{{ user.user_image }}" style="width:50px; height:50px;">
+            <img id="target_img" src="{{ user.user_image.url }}" style="width:50px; height:50px;">
             <input type="file" id="user_image" name="user_image" style="display:none;">
             <span id="user_name">{{ user.user_name }}</span>
             <!-- 프로필사진 -->
