--- a/checkmate/templates/domitoryView.html
+++ b/checkmate/templates/domitoryView.html
@@ -5,27 +5,46 @@
 <link rel="stylesheet" href="{% static 'css/view_page.css' %}">
 {% endblock %}
 {% block content %}
+<div class="popup">
+    <h4>스크랩 성공!</h4>
+    <div class="popup-close">&times;</div> 
+</div>
+
+<div class="popup2">
+    {% if messages %}
+    <h4>
+        {% for message in messages %}
+        {{ message.message }}
+        {% endfor %}
+    </h4>
+        {% endif %}
+    <div class="popup-close">&times;</div>
+</div>
 
 <div class="col-12 col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
     <p class="view_info">{{ post.preface }} | {{ post.preface_2 }}</p>
     <div class="view_box1">
         <h3>{{ post.title }}</h3>
         <form action="" method="GET">
+            {% if user.is_authenticated %}
             <button class="scrapBtn" id="Favorites" type="submit" name="Favorites" value="scrap">
                 <i class="far fa-star" id="star"></i></button>
+            {% endif %}
         </form>
         <!-- 타이틀 -->
         <small>{{ post.pub_date }}</small>
     </div>
     <div class="view_box2">
-        <img src="{{ post.user_id.user_image }}" alt="profile_image" style="width:500px; height:500px;">
+        <img src="{{ post.user_id.user_image.url }}" alt="profile_image" style="width:50px; height:50px;">
         <!-- 프로필이미지 -->
         <p> {{ post.user_id.user_nickname }} </p>
         <!-- 닉네임 -->
     </div>
 
     <div>
+        {% if post.image %}
         <img src="{{ post.image }}" alt="image">
+        {% endif %}
         <p class="body">{{ post.content }}</p>
         <!-- 내용 -->
         {% if post.user_id.id == user.id %}
@@ -39,30 +58,40 @@
     </div>
     <div>
         <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">◀ 이전글</a></li>
+            <li class="page-item"><a class="page-link" href="{% url 'domitoryView' pre%}">◀ 이전글</a></li>
             <li class="page-item"><a class="page-link" href="/domitoryCommunity">목록</a></li>
-            <li class="page-item"><a class="page-link" href="#">다음글 ▶</a></li>
+            <li class="page-item"><a class="page-link" href="{% url 'domitoryView' next%}">다음글 ▶</a></li>
         </ul>
     </div>
 </div>
-<div class="popup">
-    <h4> 스크랩 완료! </h4>
-    <div class="popup-close">&times;</div>
-</div>
+
 
 <script>
+    document.querySelector(".popup").style.display="none";
+    document.querySelector(".popup2").style.display="none";
     const scrapBtn = document.querySelector('.scrapBtn');
     const popup = document.querySelector('.popup');
+    const popup2 = document.querySelector('.popup2');
+    const popupClose = document.querySelector('.popup-close');
 
-    popup.style.display="none";
-    function open(){ 
-        scrapBtn.addEventListener('click', function (event){ 
-        popup.style.display = 'block';  
-        })
-    } 
-    open();
+
     document.querySelector(".popup-close").onclick = function() {
         document.querySelector(".popup").style.display="none";
-        }
+        document.querySelector(".popup2").style.display="none";
+    }
+    
+
+    popup.style.display="none";
+    popup2.style.display="none";
+
+
+    if("{{fail}}"=="0"){
+        popup.style.display = 'block'; 
+    }
+    if("{{fail}}"=="1"){
+        popup2.style.display = 'block'; 
+    }
+
+
 </script>
 {% endblock %}
