--- a/checkmate/templates/offcampusUpdate.html
+++ b/checkmate/templates/offcampusUpdate.html
@@ -22,10 +22,10 @@
 			<!-- 정보 게시판 제목 -->
 		</div>
 		<div class="info_container-box2">
-			<img src="" alt="profile_image">
+			<img src="{{post.user_id.user_image.url}}" alt="profile_image" style="width:50px; height:50px;">
 			<!-- 프로필이미지 -->
 			<p>{{ user.user_nickname }}</p>
-			<input type="image" src="{{ post.image }}" alt="" name="image">
+			<input type="file" value="{{ post.image }}" alt="" name="image">
 			<!-- 사진 업로드 -->
 		</div>
 		<textarea class="body" name="content" cols="130" rows="20" style="resize: none;" placeholder="   이곳에 본문을 작성하세요."
