--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -432,6 +432,7 @@
 
 
     let surveyCheck = "{{ survey_ess }}";
+    console.log(surveyCheck);
     if(surveyCheck == 'None'){
         document.getElementById("first_open_modal").style.display = "block";
     }
