스크랩 모달 완료

--- a/roommate/templates/detail.html
+++ b/roommate/templates/detail.html
@@ -18,7 +18,7 @@
         {% endfor %}
     </h4>
         {% endif %}
-    <div class="popup-close">&times;</div>
+    <div class="popup2-close">&times;</div>
 </div>
 
 <div class="col-12 col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
@@ -245,23 +245,20 @@
 
 
 <script>
-    document.querySelector(".popup").style.display="none";
-    document.querySelector(".popup2").style.display="none";
     const scrapBtn = document.querySelector('.scrapBtn');
     const popup = document.querySelector('.popup');
     const popup2 = document.querySelector('.popup2');
     const popupClose = document.querySelector('.popup-close');
+    popup.style.display="none";
+    popup2.style.display="none";
 
 
     document.querySelector(".popup-close").onclick = function() {
         document.querySelector(".popup").style.display="none";
+    }
+    document.querySelector(".popup2-close").onclick = function() {
         document.querySelector(".popup2").style.display="none";
     }
-    
-
-    popup.style.display="none";
-    popup2.style.display="none";
-
 
     if("{{fail}}"=="0"){
         popup.style.display = 'block'; 
@@ -269,7 +266,6 @@
     if("{{fail}}"=="1"){
         popup2.style.display = 'block'; 
     }
-
 
 </script>
 {% endblock %}
