--- a/checkmate/templates/mypageScrap_off.html
+++ b/checkmate/templates/mypageScrap_off.html
@@ -53,7 +53,7 @@
                                 {% for scrap in off_scraps %}   
                                     <td><input type="checkbox" name="check[]" class="mypage_list-checkbox checkbox_all" value="{{scrap.id}}"></td>
                                     <td>{{ scrap.Offcampus_Post.user_id.user_nickname }}</td>
-                                    <td><a href="{% url 'detail' scrap.Offcampus_Post.id %}">{{ scrap.Offcampus_Post.title }}</a></td>
+                                    <td><a href="{% url 'offcampusView' scrap.Offcampus_Post.id %}">{{ scrap.Offcampus_Post.title }}</a></td>
                                 {% endfor %}
                                 </tr>
                             </div>
@@ -64,12 +64,12 @@
                 </form>
                 <div>
                     <ul class="pagination justify-content-center">
-                        <li class="page-item"><a class="page-link" href="#" style="color:#76787d; border:0;">◀</a></li>
-                        {% for page in room_page_range %}
-                        <li class="page-item"><a class="page-link" href="{% url 'mypageScrap'%}?page={{page}}" style="color:#254074; border:0;">{{page}}</a>
+                        <li class="page-item"><a class="page-link" href="{% url 'mypageScrap_off'%}?page={{pre_page}}" style="color:#76787d; border:0;">◀</a></li>
+                        {% for page in off_page_range %}
+                        <li class="page-item"><a class="page-link" href="{% url 'mypageScrap_off'%}?page={{page}}" style="color:#254074; border:0;">{{page}}</a>
                         </li>
                         {% endfor %}
-                        <li class="page-item"><a class="page-link" href="#"  style="color:#254074; border:0;">▶</a></li>
+                        <li class="page-item"><a class="page-link" href="{% url 'mypageScrap_off'%}?page={{next_page}}"  style="color:#254074; border:0;">▶</a></li>
                     </ul>
                 </div>
             </div>
