--- a/checkmate/templates/offcampusCommunity.html
+++ b/checkmate/templates/offcampusCommunity.html
@@ -70,11 +70,11 @@
 
     <div>
         <ul class="pagination justify-content-center">
-            <li class="page-item"><a class="page-link" href="#" style="color:#254074; border:0;">◀</a></li>
+            <li class="page-item"><a class="page-link" href="{% url 'offcampusCommunity'%}?page={{pre_page}}" style="color:#254074; border:0;">◀</a></li>
             {% for page in page_range %}
             <li class="page-item"><a class="page-link" href="{% url 'offcampusCommunity'%}?page={{page}}" style="color:#254074; border:0;">{{page}}</a></li>
             {% endfor %}
-            <li class="page-item"><a class="page-link" href="#" style="color:#254074; border:0;">▶</a></li>
+            <li class="page-item"><a class="page-link" href="{% url 'offcampusCommunity'%}?page={{next_page}}" style="color:#254074; border:0;">▶</a></li>
         </ul>
     </div>
 </div>
