테스팅 수정사항

--- a/checkmate/templates/dom_infoWrite.html
+++ b/checkmate/templates/dom_infoWrite.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="info_container col-12 col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
 	<h3 class="row justify-content-center">기숙사 정보 공유 게시판</h3>
-	<form action="" method="post">
+	<form action="" method="post" enctype="multipart/form-data">
 		<div class="info_container-box1 row">
 			{% csrf_token %}
 
