--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -16,6 +16,18 @@
     <!-- 모달 -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script> -->
+    <style>
+        .dropdown-item{
+            color: rgb(129, 129, 129);
+        }
+        .dropdown-item:hover{
+            color: rgb(129, 129, 129);
+        }
+        .dropdown-item:active{
+            color:white;
+        }
+
+    </style>
     {% block head %}
     {% endblock %}
 </head>
@@ -59,8 +71,8 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false" href="{% url 'domitoryCommunity' %}" style="color: rgba(93, 148, 255, 1);">정보공유</a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="{% url 'domitoryCommunity' %}" style="color: rgb(129, 129, 129);">기숙사 정보</a></li>
-                            <li><a class="dropdown-item" href="{% url 'offcampusCommunity' %}" style="color: rgb(129, 129, 129);">자취 정보</a></li>
+                            <li><a class="dropdown-item" href="{% url 'domitoryCommunity' %}" >기숙사 정보</a></li>
+                            <li><a class="dropdown-item" href="{% url 'offcampusCommunity' %}" >자취 정보</a></li>
                         </ul>
                         </li>
                     {% if user.is_authenticated %}
