--- a/checkmate/templates/domitoryView.html
+++ b/checkmate/templates/domitoryView.html
@@ -42,8 +42,8 @@
     </div>
     <hr>
     <div>
-        {% if post.image %}
-        <img src="{{ post.image }}" alt="image">
+        {% if post.image.url %}
+        <img src="{{ post.image.url }}" alt="image" style="width:80%">
         {% endif %}
         <p class="body">{{ post.content }}</p>
         <!-- 내용 -->
