--- a/checkmate/templates/infoWrite.html
+++ b/checkmate/templates/infoWrite.html
@@ -10,7 +10,7 @@
 <div class="info_container col-12 col-md-12 offset-md-0 col-lg-10 offset-lg-1 col-xxl-8 offset-xxl-2">
 	<h3 class="row justify-content-center">자취 정보 공유 게시판</h3>
 
-	<form action="" method="post">
+	<form action="" method="post" enctype="multipart/form-data">
 		<div class="info_container-box1">
 			{% csrf_token %}
 
