--- a/checkmate/templates/mypageWritten.html
+++ b/checkmate/templates/mypageWritten.html
@@ -11,7 +11,7 @@
         <!-- border-left 색상 바꾸기 (클릭 모션) -->
         <ul>
             <li><a href="{% url 'mypageProfile' %}">회원정보 수정</a></li>
-            <link rel="stylesheet" href="{% static 'css/mypageCheckupdate.css' %}">
+            <li><a href="{% url 'mypageCheckupdate' %}">체크리스트 수정</a></li>
             <li><a href="{% url 'mypageScrap' %}">스크랩 목록</a></li>
             <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
         </ul>
@@ -20,7 +20,7 @@
     <div class="mypage_nav_mobile row d-block d-md-none">
         <ul >
             <li><a href="{% url 'mypageProfile' %}">회원정보 수정</a></li>
-            <link rel="stylesheet" href="{% static 'css/mypageCheckupdate.css' %}">
+            <li><a href="{% url 'mypageCheckupdate' %}">체크리스트 수정</a></li>
             <li><a href="{% url 'mypageScrap' %}">스크랩 목록</a></li>
             <li><a href="{% url 'mypageWritten' %}">내가 작성한 글</a></li>
         </ul>
