--- a/checkmate/templates/dom_infoWrite.html
+++ b/checkmate/templates/dom_infoWrite.html
@@ -27,11 +27,11 @@
 			<input id="title" name="title" type="text" placeholder="이곳에 제목을 작성하세요." class="col-12 col-md-8">
 			<!-- 정보 게시판 제목 -->
 		</div>
-		<div class="info_container-box2">
-			<img src="{{user.user_image.url}}" alt="profile_image" style="width:50px; height:50px;">
+		<div class="info_container-box2 row">
+			<img class="col-2" src="{{user.user_image.url}}" alt="profile_image" style="width:30px; height:30px; padding: 0px">
 
 			<!-- 프로필이미지 -->
-			<p class="col-9 col-md-7 mb-2">{{ user.user_nickname }}</p>
+			<p class="col-9 col-md-7 mb-2  pb-3">{{ user.user_nickname }}</p>
 			<input type="file" name="image" class="col-12 col-md-3">
 			<!-- 사진 업로드 -->
 		</div>
