--- a/static/css/view_page.css
+++ b/static/css/view_page.css
@@ -4,8 +4,7 @@ p{
    margin: 0;
 }
 
-.p-m-b > p
-{
+.p-m-b p, .p-m-b strong{
    margin-bottom: 10px;
 }
 
@@ -193,6 +192,10 @@ p{
         display: inline-block;
         font-family: 'S-CoreDream-4Regular';
         width: 30%
+     }
+
+     .profile-title{
+        font-size: 13px;
      }
     
 }
