--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -20,7 +20,7 @@
                     <h1 class="main-title shadow-title">나와 딱 맞는</h1>
                     <h1 class="main-title shadow-title">룸메이트 찾기</h1>
                 </div>
-                <p class="detail" >설명설명설명<br>설명설명설명</p>
+                <p class="detail" >당신의 새로운 시작과<br>새로운 룸메이트와의 꽃길을 응원합니다.</p>
             </div>
             <div class="main-img col-lg-5 col-md-6 col-sm-12 p-0 d-none d-sm-none d-md-block">
                  <img class="col-lg-5 col-md-6 col-sm-12" id="main-img"src="{% static 'img/img_main.png' %}" alt="">
