--- a/checkmate/templates/domitoryView.html
+++ b/checkmate/templates/domitoryView.html
@@ -34,14 +34,14 @@
         <!-- 타이틀 -->
         <small class="float-end p-2">{{ post.pub_date }}</small>
     </div>
-    <div class="view_box2">
-        <img src="{{ post.user_id.user_image.url }}" alt="profile_image" style="width:50px; height:50px;">
+    <div class="view_box2 row">
+        <img src="{{ post.user_id.user_image.url }}" alt="profile_image" style="width:50px; height:50px; padding:0px;">
         <!-- 프로필이미지 -->
         <p class="col-12 col-md-3"> {{ post.user_id.user_nickname }} </p>
         <!-- 닉네임 -->
     </div>
     <hr>
-    <div>
+    <div class="mb-5">
         {% if post.image.url %}
         <img src="{{ post.image.url }}" alt="image" style="width:80%">
         {% endif %}
@@ -52,16 +52,10 @@
             <a href="{% url 'domitoryUpdate' post.id %}" class="btn btn-light"><span>수정</span></a>
             <a href="{% url 'domitoryDelete' post.id %}" class="btn btn-light"><span>삭제</span></a>
         </div>
+        <br><br>
         {% else %}
 
         {% endif %}
-    </div>
-    <div>
-        <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="{% url 'domitoryView' pre%}">◀ 이전글</a></li>
-            <li class="page-item"><a class="page-link" href="/domitoryCommunity">목록</a></li>
-            <li class="page-item"><a class="page-link" href="{% url 'domitoryView' next%}">다음글 ▶</a></li>
-        </ul>
     </div>
 </div>
 
