--- a/static/css/view_page.css
+++ b/static/css/view_page.css
@@ -63,7 +63,7 @@ p{
     padding-top: 30px;
     padding-left: 30px;
     width: 40vw;
-    height: 50vh;
+    padding-bottom:30px;
 }
 .bottom{
     font-family: 'S-CoreDream-5Medium';
