checkmate media 수정

--- a/checkmate/templates/dom_infoWrite.html
+++ b/checkmate/templates/dom_infoWrite.html
@@ -32,7 +32,7 @@
 
 			<!-- 프로필이미지 -->
 			<p class="col-9 col-md-7 mb-2">{{ user.user_nickname }}</p>
-			<input type="file" name="image" class="col-12 col-md-3">
+			<input type="file" name="image" accept="user_image/*" class="col-12 col-md-3">
 			<!-- 사진 업로드 -->
 		</div>
 		<textarea  class="body" id="content" name="content" cols="130" rows="20" style="resize: none;"
