--- a/checkmate/templates/domitoryView.html
+++ b/checkmate/templates/domitoryView.html
@@ -43,7 +43,7 @@
     </div>
     <hr>
     <div>
-        {% if post.image.url %}
+        {% if post.image %}
         <img src="{{ post.image.url }}" alt="image" style="width:80%">
         {% endif %}
         <p class="body">{{ post.content }}</p>
