--- a/checkmate/templates/offcampusView.html
+++ b/checkmate/templates/offcampusView.html
@@ -48,7 +48,7 @@
     <hr>
     <div>
         <p class="body">
-        {% if post.image.url %}
+        {% if post.image %}
         <img src="{{ post.image.url }}" alt="image" style="width:80%;">
         {% endif %}
         {{ post.content }} </p>
