main page css 수정

--- a/static/css/main2.css
+++ b/static/css/main2.css
@@ -1,50 +1,56 @@
-@media (max-width: 567px) {
+@media (max-width: 566px) {
     .main-title{
         text-align:center !important;
         font-size: 40px;
     }
     .text > .detail{
         text-align:center !important;
-        font-size: 20px;
+        font-size: 17px;
         margin-bottom: 20px !important;
     }
 }
 @media (min-width: 567px) {
     .main-title{
-        text-align:center !important;
+        text-align:center;
         font-size: 60px;
     }
     .text > .detail{
-        text-align:center !important;
-        font-size: 30px;
-        margin-bottom: 20px !important;
+        text-align:center;
+        font-size: 25px;
+        margin-bottom: 20px;
     }
 }
 @media (min-width: 768px) {
     .main-title{
+        text-align:right;
         font-size: 45px;
     }
     .text > .detail{
-        font-size: 20px;
+        text-align:right;
+        font-size: 17px;
     }
 }
 @media (min-width: 992px) {
     .main-title{
+        text-align:right;
         font-size: 50px;
         padding: 0 3vw 0 0;
     }
     .text > .detail{
-        font-size: 20px;
+        text-align:right;
+        font-size: 17px;
         padding: 0 3vw 0 0;
     }
 }
 @media (min-width: 1200px) {
     .main-title{
+        text-align:right;
         font-size: 60px;
         padding: 0 4vw 0 0;
     }
     .text > .detail{
-        font-size: 25px;
+        text-align:right;
+        font-size: 20px;
         padding: 0 4vw 0 0;
     }
 }
@@ -71,7 +77,7 @@
 }
 
 .main-title{
-    text-align: right;
+    /* text-align: right; */
     width: 100%;
     font-family: 'yg-jalnan';
     font-style: normal;
@@ -101,7 +107,7 @@
 
 .text > .detail{
     width: 100%;
-    text-align: right;
+    /* text-align: right; */
     font-family: 'S-CoreDream-5Medium';
     color: #3F97FF;
     margin: 3vh 0 0 0;
